--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,11 @@
+* {
+  background-color: #f1f3e8;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-  background-color: #f1f3e8;
-
+  background-color: #c6d1a6;
 }
